--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Terese
 SEOTitle: 曦妤的博客
-header-img: img/post-bg-desk.jpg
+header-img: img/first.jpg
 email: teresesong@163.com
 description: "每天进步一点点."
 keyword: "大数据分析,曦妤的博客,菜鸟每天都要学习"
