--- a/_config.yml
+++ b/_config.yml
@@ -51,13 +51,13 @@ gems: [jekyll-paginate]
 markdown: kramdown
 highlighter: rouge
 kramdown:
-  input: GFM                            # use Github Flavored Markdown !important
+input: GFM                            # use Github Flavored Markdown !important
 
 
 
-# 评论系统
+评论系统
 # Disqus（https://disqus.com/）
-# disqus_username: teresesong
+disqus_username: TeresaSong
 
 # Gitalk
 gitalk:
@@ -74,13 +74,11 @@ gitalk:
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: f0bbcff2c83fcd4e0ffd374caa8a4046
+ba_track_id: 
 
 # Google Analytics
 # ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
 # ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
-
-
 
 
 
