--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ input: GFM                            # use Github Flavored Markdown !important
 
 
 
-评论系统
+# 评论系统
 # Disqus（https://disqus.com/）
 disqus_username: TeresaSong
 
