--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ input: GFM                            # use Github Flavored Markdown !important
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: TeresaSong
+# disqus_username: TeresaSong
 
 # Gitalk
 gitalk:
@@ -84,7 +84,7 @@ ba_track_id: f0bbcff2c83fcd4e0ffd374caa8a4046
 
 # Featured Tags
 featured-tags: true                     # 是否使用首页标签
-featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
+featured-condition-size: 2             # 相同标签数量大于这个数，才会出现在首页
 
 
 
