--- a/_config.yml
+++ b/_config.yml
@@ -64,4 +64,4 @@ theme: icarus
 deploy:
   type: git
   repo: https://github.com/TereseSong/TereseSong.github.io.git
-  branch: master
+  branch: gh-pages
